--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "protobufjs": "^7.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remixicon": "^3.4.0",
+    "react-icons": "^4.10.1",
     "semver": "^7.5.4",
     "typescript": "5.1.3"
   },
