--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.6",
     "firebase": "^10.1.0",
     "next": "13.4.6",
     "protobufjs": "^7.2.4",
@@ -25,6 +23,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
