--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.10.1",
+        "react-select": "^5.8.0",
+        "react-toastify": "^10.0.4",
         "semver": "^7.5.4",
         "typescript": "5.1.3"
     },
