--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@firebase/auth": "^1.6.0",
         "@types/node": "20.3.1",
         "@types/react": "18.2.12",
         "@types/react-dom": "18.2.5",
-        "firebase": "^10.7.1",
+        "firebase": "^10.8.0",
         "next": "13.4.6",
         "protobufjs": "^7.2.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-icons": "^4.10.1",
+        "react-icons": "^4.12.0",
         "react-select": "^5.8.0",
         "react-toastify": "^10.0.4",
         "semver": "^7.5.4",
         "typescript": "5.1.3"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
         "autoprefixer": "^10.4.14",
         "eslint": "^8.56.0",
         "eslint-config-next": "^14.0.4",
