--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@types/react": "18.2.12",
         "@types/react-dom": "18.2.5",
         "firebase": "^10.8.0",
-        "next": "13.4.6",
+        "next": "^13.4.6",
         "protobufjs": "^7.2.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -29,7 +29,7 @@
         "autoprefixer": "^10.4.14",
         "eslint": "^8.56.0",
         "eslint-config-next": "^14.0.4",
-        "postcss": "^8.4.24",
+        "postcss": "^8.4.35",
         "tailwindcss": "^3.3.2"
     }
 }
