--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/react": "18.2.12",
         "@types/react-dom": "18.2.5",
         "firebase": "^10.8.0",
+        "framer-motion": "^11.0.3",
         "next": "^13.4.6",
         "protobufjs": "^7.2.4",
         "react": "18.2.0",
