--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@firebase/auth": "^1.7.8",  
         "@firebase/auth": "^1.7.7",
         "@firebase/storage": "^0.13.0",
         "@types/node": "20.16.2",
